--- a/cart.html
+++ b/cart.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart</title>
     <link rel="stylesheet" href="css\cart.css">
+    <link rel="stylesheet" href="css/cart/mobile_cart.css" media="(max-width:600px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -64,7 +65,7 @@
                 <th>Remove</th>
             </tr>
             <tr>
-                <td><img src="img\cloth_1.jpg" width="200px" alt=""></td>
+                <td><img src="img\cloth_1.jpg" width="100px" alt=""></td>
                 <td>Top Up T-Shirt</td>
                 <td>$49.00</td>
                 <td>
@@ -80,7 +81,7 @@
                 <td><button class="rem">x</button></td>
             </tr>
             <tr>
-                <td><img src="img\cloth_2.jpg" width="200px" alt=""></td>
+                <td><img src="img\cloth_2.jpg" width="100px" alt=""></td>
                 <td>Polo T-Shirt</td>
                 <td>$49.00</td>
                 <td>
@@ -108,7 +109,7 @@
         <br>
         <div class="L-lower">
             <h1>coupon</h1>
-            <input type="text" style="border: none;" placeholder="Enter your coupon code if you have one.">
+            <input type="text"  placeholder="Enter your coupon code if you have one.">
             <br>
             <input type="text" placeholder="Coupon code" >
             <button>apply coupon</button>
