--- a/checkout.html
+++ b/checkout.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>check_out</title>
     <link rel="stylesheet" href="css\checkout.css">
+    <link rel="stylesheet" href="css/checkout/check_mobile.css" media="(max-width:600px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -57,8 +58,8 @@
 <section class="secc">
     <div class="divv">
         <div class="cccc">
-        <p class="bill">Billing Details</p>
-        <p class="Coupon">Coupon Code</p>
+            <p class="bill">Billing Details</p>
+        </div>
     </div>
     <div class="bbb">
         <div class="border">
@@ -124,6 +125,8 @@
             </div>
         </div>
         <div class="border2">
+            
+        <p class="Coupon">Coupon Code</p>
             <div class="coppp">
             <p class="hhh">Enter your coupon code if you have one</p>
             <input class="couppp" type="text" placeholder="Coupon Code">
