--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home_page</title>
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c8347c8e1a.js" crossorigin="anonymous"></script>
     <link rel="icon" href="./img/icon.png">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/homepage/home_page_mobile.css" media="(max-width:600px)">
 </head>
 <body>
                         <!--NavBar-->
@@ -30,8 +31,8 @@
         </div>
         <hr style="color:#ccc; border-top:1px solid #ccc;">
         <nav>
-            <a href="./index.html" target="_blank"  class="link-home">Home <i class="fa-solid fa-caret-down" style="font-size: 0.7rem;padding-left: 10px;"></i></a>
-            <a href="./about.html" class="links">about <i class="fa-solid fa-caret-down" style="font-size: 0.7rem; padding-left: 10px;"></i></a>
+            <a href="./index.html" target="_blank"  class="link-home">Home <i class="fa-solid fa-caret-down" style="font-size: 0.5rem;padding-left: 10px;"></i></a>
+            <a href="./about.html" class="links">about <i class="fa-solid fa-caret-down" style="font-size: 0.5rem; padding-left: 10px;"></i></a>
             <a href="./shop.html" class="links">shop</a>
             <a href="" class="links">catalogue</a>
             <a href="" class="links">new arrivals</a>
@@ -118,13 +119,13 @@
                 <h3>$50</h3>
             </div>
         </div>
-        <div>
+        <div  class="arrow">
             <i class="fa-solid fa-arrow-left" style="color:#ccc ;"></i>
             <i class="fa-solid fa-arrow-right"></i>
         </div>
     </section>
     <br>
-    <hr class="hr" style="color:#ccc; border-top:1px solid #ccc;">
+    <hr class="hr" style="color:#ccc; border-top:1px solid #ccc; margin-top: 150px;">
 
     <article>
         <h1 class="h1" > Big Sale!</h1>
