--- a/single_product.html
+++ b/single_product.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tank_top</title>
     <link rel="stylesheet" href="./css/single_product.css">
+    <link rel="stylesheet" href="./css/single pro/single_mobile.css" media="(max-width:600px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -104,7 +105,7 @@
             <h3>$50</h3>
         </div>
     </div>
-    <div>
+    <div class="arrow">
         <i class="fa-solid fa-arrow-left" style="color:#ccc ;"></i>
         <i class="fa-solid fa-arrow-right"></i>
     </div>
