--- a/thankyou.html
+++ b/thankyou.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You</title>
     <link rel="stylesheet" href="css\thankyou.css">
+    <link rel="stylesheet" href="css/thankyou/thank_mobile.css" media="(max-width:600px)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -40,10 +41,10 @@
                     style="font-size: 0.7rem;padding-left: 10px;"></i></a>
             <a href="./about.html" class="links">about <i class="fa-solid fa-caret-down"
                     style="font-size: 0.7rem; padding-left: 10px;"></i></a>
-            <a href="./shop.html" class="link-home">shop</a>
+            <a href="./shop.html" class="links">shop</a>
             <a href="" class="links">catalogue</a>
             <a href="" class="links">new arrivals</a>
-            <a href="" class="links">contact</a>
+            <a href="" class="link-home">contact</a>
         </nav>
     </header>
                             <!-- Home / Contact -->
